--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'com.android.application'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'commons-codec:commons-codec:1.11'
 }
 
 android {
